--- a/meesho.css
+++ b/meesho.css
@@ -1,428 +1,740 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-:root{
-    --hoverTextcolor:rgb(244,51,151);
-    --text-color: rgb(50, 49, 49)
+:root {
+  --hoverTextcolor: rgb(244, 51, 151);
+  --text-color: rgb(50, 49, 49);
 }
-body{
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    font-family: 'Inter', sans-serif;
-    font-size: 15px;
-    font-weight: 500;
-    color: #7d7b7b;
-
-}
-
-.header{
-    border-top: 1px solid #ccc;
-    height: 72px;
-    outline: 1px solid #ccc;
-    padding: 0px 100px;
-    display: flex;
-    align-items: center; 
-    justify-content: space-between;
-    
+body {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  font-family: "Inter", sans-serif;
+  font-size: 0.93rem;
+  font-weight: 500;
+  color: #7d7b7b;
 }
 
-.headersection{
-    overflow: visible;
-    top: 0;
-    width: 100%;
-    position: -webkit-sticky;
-    position: fixed;
-    background-color: white;
-    z-index: 3;
+#menu-icon{
+display: none;
+}
+.header {
+  border-top: 1px solid #ccc;
+  height: 4.5rem;
+  outline: 1px solid #ccc;
+  padding: 0px 6.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-
-.meeshologo{
-    width: 155px;
+.headersection {
+  overflow: visible;
+  top: 0;
+  width: 100%;
+  position: -webkit-sticky;
+  position: fixed;
+  background-color: white;
+  z-index: 3;
 }
 
-.meeshologo img{
-    width: 150px;
-}
-.searchbox{
-    height: 40px;
-    width: 400px;
-    display: flex;
-    align-items: center;
-    outline: 1px solid rgb(164, 161, 161);
-    border-radius: 3px;
-    margin-left: 20px;
-    padding: 5px;
-    position: relative;
+.meeshologo {
+  width: 9.68rem;
 }
 
-.recentSearches{
-    color: var(--text-color);
-    position: absolute;
-    padding: 10px;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    top: 41px;
-    background-color: white;
-    height: 400px;
-    display: none;
-    box-shadow: 2px 2px 1px 2px rgb(0,0,0,0.3);
-    z-index: 3;
+.meeshologo img {
+  width: 9.37rem;
+}
+.searchbox {
+  height: 2.5rem;
+  width: 25rem;
+  display: flex;
+  align-items: center;
+  outline: 1px solid rgb(164, 161, 161);
+  border-radius: 0.18rem;
+  margin-left: 1.25rem;
+  padding: 0.31rem;
+  position: relative;
+  z-index: 0;
 }
 
-.searchbox:focus-within .recentSearches{
-    display: block;
+.recentSearches {
+  color: var(--text-color);
+  position: absolute;
+  padding: 0.625rem;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  top: 2.56rem;
+  background-color: white;
+  height: 25rem;
+  display: none;
+  box-shadow: 2px 2px 1px 2px rgb(0, 0, 0, 0.3);
+  z-index: 3;
 }
 
-.searchicon img{
-    width:15px;
-    margin: 6px;
+.searchbox:focus-within .recentSearches {
+  display: block;
 }
 
-form{
-    width: 100%;
+.searchicon img {
+  width: 0.937rem;
+  margin: 0.375rem;
 }
 
-.searchinput{
-    width: 100%;
-    border: none;
-    outline: none;
-    font-size: 15px;
+form {
+  width: 100%;
 }
 
-#crossmarkid{
-    display: none;
+.searchinput {
+  width: 100%;
+  border: none;
+  outline: none;
+  font-size: 0.937rem;
 }
 
-.recentlistsicon img{
-    width: 20px;
-    margin-right: 10px;
+#crossmarkid {
+  display: none;
 }
 
-.iconsearchlist{
-    display: flex;
-    align-items: center;
+.recentlistsicon img {
+  width: 1.25rem;
+  margin-right: 0.625rem;
 }
 
-.headerleftpart{
-    display: flex;
-    align-items: center;
+.iconsearchlist {
+  display: flex;
+  align-items: center;
 }
 
-.headerrightpart{
-    display: flex;
-    align-items: center;
-    color: var(--text-color);
+.headerleftpart {
+  display: flex;
+  align-items: center;
 }
 
-
-.downloadAppsection{
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    margin-right: 15px;
-    position: relative;
-    color: var(--text-color);
-    /* color: rgb(50, 49, 49); */
-    
-}
-.downloadAppsection:hover{
-    color:var(--hoverTextcolor);
-    cursor: pointer;
+.headerrightpart {
+  display: flex;
+  align-items: center;
+  color: var(--text-color);
 }
 
-.hoveringcontent{
-    position: absolute;
-    top: 33px;
-    bottom: 0;
-    width: 200px;
-    height: 200px;
-    margin-left: -30px;
-    background-color: white;
-    display: block;
-    display: none;
-    z-index: 3;
+.downloadAppsection {
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  margin-right: 0.937rem;
+  position: relative;
+  color: var(--text-color);
+  /* color: rgb(50, 49, 49); */
 }
-.downloadlink a img{
-    margin-bottom: 10px;
+.downloadAppsection:hover {
+  color: var(--hoverTextcolor);
+  cursor: pointer;
 }
 
-.hoveringcontent h3{
-    color: #5e5959;
+.hoveringcontent {
+  position: absolute;
+  top: 2.062rem;
+  bottom: 0;
+  width: 12.5rem;
+  height: 12.5rem;
+  margin-left: -1.875rem;
+  background-color: white;
+  display: block;
+  display: none;
+  z-index: 3;
+}
+.downloadlink a img {
+  margin-bottom: 0.625rem;
+}
+
+.hoveringcontent h3 {
+  color: #5e5959;
 }
 
 .downloadAppsection:hover .hoveringcontent,
-.downloadAppsection:focus .hoveringcontent{
-    display: block;
+.downloadAppsection:focus .hoveringcontent {
+  display: block;
 }
 
-.downloadlink  a img{
-    width:100%;
+.downloadlink a img {
+  width: 100%;
 }
 
-.mobileicon img{
-    width: 15px;
-    height: 100%;
-    margin-right:14px;
+.mobileicon img {
+  width: 0.93rem;
+  height: 100%;
+  margin-right: 0.87rem;
 }
 
-.downloadAppsection p{
-    margin: 0;
-    padding: 0;
+.downloadAppsection p {
+  margin: 0;
+  padding: 0;
 }
 
-.profileandcart{
-    display: flex;
-    align-items: center;
+.profileandcart {
+  display: flex;
+  align-items: center;
 }
 
-.profileimage img{
-    width: 20px;
+.profileimage img {
+  width: 1.25rem;
 }
 
-.cartimage img{
-    width: 20px;
+.cartimage img {
+  width: 1.25rem;
 }
 
-.profile span{
-    margin: 0;
-    padding: 0;
-    
+.profile span {
+  margin: 0;
+  padding: 0;
 }
 
-.cart span{
-    margin: 0;
-    padding: 0;
+.cart span {
+  margin: 0;
+  padding: 0;
 }
-.profile{
-    padding: 0px 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-right: 1px solid #ccc;
+.profile {
+  padding: 0px 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-right: 1px solid #ccc;
 }
-.cart{
-    padding: 0px 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.cart {
+  padding: 0px 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.cart:hover{
-    color:var(--hoverTextcolor);
-    cursor: pointer;
+.cart:hover {
+  color: var(--hoverTextcolor);
+  cursor: pointer;
 }
-.supplier{
-    padding: 0px 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-right: 1px solid #ccc;
-    border-left: 1px solid #ccc;
-    color: var(--text-color);
-    font-size: 16px;
-}
-
-.supplier:hover{
-   color:var(--hoverTextcolor);
-   cursor: pointer;
-}
-.profile{
-    position: relative;
-
+.supplier {
+  padding: 0px 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-right: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  color: var(--text-color);
+  font-size: 1rem;
 }
 
-.profile:hover{
-color:var(--hoverTextcolor);
-cursor: pointer;
+.supplier:hover {
+  color: var(--hoverTextcolor);
+  cursor: pointer;
+}
+.profile {
+  position: relative;
 }
 
-.profilecontainer{
-    position: absolute;
-    width: 400px;
-    margin-left: 30px;
-    top: 45px;
-    background-color: white;
-    display: none;
+.profile:hover {
+  color: var(--hoverTextcolor);
+  cursor: pointer;
+}
+
+.profilecontainer {
+  position: absolute;
+  width: 400px;
+  margin-left: 30px;
+  top: 45px;
+  background-color: white;
+  display: none;
 }
 
 .profile:hover .profilecontainer,
-.profile:focus .profilecontainer{
-    display: block;
+.profile:focus .profilecontainer {
+  display: block;
 }
 
-nav{
-    width: 100%;
-    border-bottom:2px solid  #ccc;
-    height: 54px;
-
+.nav{
+  margin-top: 84px;
+ 
+}
+nav {
+  width: 100%;
+  border-bottom: 2px solid #ccc;
+  z-index: 2;
+  height: 54px;
 }
 
-nav ul{
-    color: var(--text-color);
-    padding: 0;
-    height: 100%;
-    margin: 0 90px;
-    padding: 0px 10px;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    
+nav ul {
+  color: var(--text-color);
+  padding: 0;
+  height: 100%;
+  margin: 0 90px;
+  padding: 0px 10px;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
 }
 
-nav ul li{
-    height: 100%;
-    display: flex;
-    align-items: center;
-    margin: 0;
-    cursor: pointer;
+nav ul li {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  cursor: pointer;
 }
 
-nav ul li:hover{
-    color: var(--hoverTextcolor);
-    border-bottom: 4px solid #F43397;
+nav ul li:hover {
+  color: var(--hoverTextcolor);
+  border-bottom: 4px solid #f43397;
 }
 
-.submenucontainer{
-    position: absolute;
-    background-color: white;
-    left:0;
-    right:0;
-    top: 51px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    margin: 0px 10px;
-    box-shadow:1px 1px 1px rgb(0,0,0,0.3);
-    display: none;
-    padding: 20px;
+.submenucontainer {
+  position: absolute;
+  background-color: white;
+  left: 0;
+  right: 0;
+  top: 51px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  margin: 0px 10px;
+  box-shadow: 1px 1px 1px rgb(0, 0, 0, 0.3);
+  display: none;
+  padding: 20px;
 }
 
-nav ul li:hover .submenucontainer{
-    display: block;
+nav ul li:hover .submenucontainer {
+  display: block;
 }
 
-.submenulist{
-    display: flex;
+.submenulist {
+  display: flex;
 }
-.submenulist p{
-    color: var(--text-color);
-}
-
-.column{
-    margin-right: 40px;
+.submenulist p {
+  color: var(--text-color);
 }
 
-.bestqualityshopping img{
-   margin-top: 110px;
-}
-.img1 img{
-    width: 600px;
-    height: 350px;
+.column {
+  margin-right: 40px;
 }
 
-.img2 img{
-    width: 550px;
-    height: 350px;
+.bestqualityshopping img {
+  margin-top: 110px;
 }
 
-.bestqualityshopping{
-    display: flex;
-    margin: 50px 200px;
+.bestqualityshopping {
+  width: 80%;
 }
 
-
-
-.topcategoriessection{
-    width: 1100px;
-    margin: auto;
+.img1 {
+  width: 50%;
+}
+.img1 img {
+  width: 100%;
+  height: 350px;
+  height: auto;
 }
 
-.topcategoriessection img{
-    cursor: pointer;
+.img2 img {
+  width: 550px;
+  height: 350px;
 }
 
-.topcategoriesheading{
-    display: flex;
-    align-items: center;
-    margin-bottom: 50px;
-    
-}
-.horizontal-line hr{
-    padding: 1px;
-    background-color: var(--hoverTextColor);
-    width:250px;
-}
-.topcategoriesheading h1{   
-    width: max-content;
-    color: var(--text-color);
-    font-size: 35px;
-    margin:0px 30px;
+.bestqualityshopping {
+  display: flex;
+  margin: 50px 200px;
 }
 
-.images img{
-    width:1100px;
-    height: 600px;
-    margin: 20px 0px;
-    cursor: pointer;
+.topcategoriessection {
+  width: 1100px;
+  margin: auto;
+}
+
+.topcategoriessection img {
+  cursor: pointer;
+}
+
+.topcategoriesheading {
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.horizontal-line hr {
+  padding: 1px;
+  background-color: var(--hoverTextColor);
+  width: 250px;
+}
+.topcategoriesheading h1 {
+  width: max-content;
+  color: var(--text-color);
+  font-size: 35px;
+  margin: 0px 30px;
+}
+
+.images img {
+  width: 1100px;
+  height: 600px;
+  margin: 20px 0px;
+  cursor: pointer;
 }
 
 .searchbox1 {
-    display: flex ;
-    align-items:center ;
-    width: 250px;
-    height: 50px;
-    outline: 1px solid rgb(164, 161, 161);
-    padding: 0px 10px ;
-    margin-bottom: 30px ;
+  display: flex;
+  align-items: center;
+  width: 250px;
+  height: 50px;
+  outline: 1px solid rgb(164, 161, 161);
+  padding: 0px 10px;
+  margin-bottom: 30px;
 }
 
-.searchbox1 input{
-font-size: 15px;
-border: none;
-outline: none;
-margin: 0px 10px;
-
+.searchbox1 input {
+  font-size: 15px;
+  border: none;
+  outline: none;
+  margin: 0px 10px;
 }
 
-.itemslist input{
-    margin: 10px 10px;
+.itemslist input {
+  margin: 10px 10px;
+  size: 100px;
 }
 
-.itemslist label{
-    color: var(--text-color);
+.itemslist label {
+  color: var(--text-color);
 }
 
+.contentcontainer {
+  display: flex;
+}
 
-.contentcontainer{
+aside {
+  margin-right: 50px;
+  margin-left: 50px;
+}
+
+.image1 img {
+  width: 220px;
+  height: 420px;
+  cursor: pointer;
+}
+
+main {
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(250px, 1fr));
+}
+
+.headingsection h2 {
+  color: var(--text-color);
+  margin-left: 50px;
+}
+
+@media screen and (max-width: 768px) {
+  html {
+    overflow: hidden;
+  }
+
+  .headersection {
+    overflow: visible;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    position: -webkit-sticky;
+    position: fixed;
+    background-color: white;
+    z-index: 0;
+  }
+
+  .header {
+    border-top: 1px solid #ccc;
+    height: 6.5rem;
+    outline: 1px solid #ccc;
+    padding: 0px 4.25rem;
+    width: 100%;
+    z-index: -1;
+  }
+
+  .headerleftpart {
+    display: block;
+  }
+  #menu-icon{
+    display: block;
+    }
+
+  .meeshologo {
     display: flex;
-}
+    align-items: center;
+  }
 
-aside{
-    margin-right: 50px;
-    margin-left: 50px;
-}
+  .meeshologo img {
+    width: 8.37rem;
+  }
 
-.image1 img{
-    width: 220px;
-    height: 420px;
-    cursor: pointer;
-}
+  .meeshologo i {
+    margin-left: -2.5rem;
+    margin-right: 1.25rem;
+  }
 
-main{
+  .searchbox {
+    margin-top: 10px;
+    width: 88vw;
+    margin-left: -3rem;
+    overflow: hidden;
+    z-index: -2;
+  }
+  .headerrightpart {
+    display: none;
+  }
+
+  nav {
+    border-right: 1px solid black;
+    width: 30%;
+    height:95vh;
+    background: white;
+    margin-left: 15vw;
+    margin-top: -5vh;
+    z-index: 2;
+    justify-content: space-evenly;
+    top: 0px;
+  }
+  nav ul {
+    position: relative;
+    background: white;
     height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    left: -28vw;
+    align-items: flex-start;
+  }
+
+  nav ul li {
+    margin-left: 20px;
+    border-bottom: 1px solid black;
+    box-sizing: border-box;
+    width: 100%;
+  }
+
+  .submenucontainer {
+    right: 50vw;
+    left: 30vw;
+    width: 0px;
+    top: 0px;
+    position: absolute;
+  }
+
+  nav ul li:hover .submenucontainer {
+    display: block;
+  }
+
+   .navbar{
+    display: none;
+  }
+  /* nav ul li:hover .submenucontainer {
+    display: none;
+  } */
+  .submenulist {
+    background: white;
+    display: flex;
+    flex-direction: column;
+    height: 1000px;
+    width: 70vw;
+    margin-left: -23px;
+    margin-top: -20px;
+    /* left: 0; */
+    line-height: 0px;
+    top: 0px;
+  }
+
+  .submenulist .column {
     display: grid;
-    grid-template-columns: repeat(4,minmax(250px,1fr));
+    row-gap: auto;
+    line-height: 0px;
+    margin-left: 30px;
+  
+  }
+
+  .bestqualityshopping {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .bestqualityshopping img {
+    width: 99vw;
+    margin-left: -12.06rem;
+    height: 180px;
+  }
+  .images {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .images img {
+    width: 100vw;
+
+    /* height: 10.75rem; */
+    margin: 10px 0px;
+  }
+
+  .img2 img {
+    margin-top: 1rem;
+  }
+
+  .topcategoriessection {
+    width: 1100px;
+    margin: auto;
+  }
+
+  .topcategoriesheading h1 {
+    font-size: 20px;
+    margin: 0px 2.63rem;
+  }
+  .horizontal-line {
+    display: none;
+  }
+
+  .headingsection h2 {
+    margin-top: 4rem;
+  }
+
+  .contentcontainer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  main {
+    margin-top: 1.87rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
+
+  .image1 img {
+    width: 12.25rem;
+  }
+}
+
+@media screen and (max-width: 400px){
+  .images img {
+    width: 100vw;
+    height: 25vh;
+    margin: 10px 0px;
+  }
+  nav {
+    border-right: 1px solid black;
+    width: 30%;
+    height:95vh;
+    background: white;
+    margin-left: 1vw;
+    margin-top: -7.3vh;
+    z-index: 2;
+    justify-content: space-evenly;
+    top: 0px;
+  }
+  nav ul {
+    position: relative;
+    background: white;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    left: -28vw;
+    align-items: flex-start;
+  }
+
+  nav ul li {
+    margin-left: 20px;
+    border-bottom: 1px solid black;
+    box-sizing: border-box;
+    width: 100%;
+  }
+
+  .submenucontainer {
+    right: 50vw;
+    left: 30vw;
+    width: 0px;
+    top: 0px;
+    position: absolute;
+  }
+
+  nav ul li:hover .submenucontainer {
+    display: block;
+  }
+
+   .navbar{
+    display: none;
+  }
+  /* nav ul li:hover .submenucontainer {
+    display: none;
+  } */
+  .submenulist {
+    background: white;
+    display: flex;
+    flex-direction: column;
+    height: 1000px;
+    width: 70vw;
+    margin-left: -23px;
+    margin-top: -20px;
+    /* left: 0; */
+    line-height: 0px;
+    top: 0px;
+  }
+
+  .submenulist .column {
+    display: grid;
+    row-gap: auto;
+    line-height: 0px;
+    margin-left: 30px;
+  }
 
 }
 
-.headingsection h2{
-   color: var(--text-color);
-   margin-left: 50px;
+@media screen and (max-width: 320px){
+  nav {
+    border-right: 1px solid black;
+    width: 50%;
+    height:95vh;
+    background: white;
+    margin-left: -30vw;
+    margin-top: -50px;
+    z-index: 2;
+    justify-content: space-evenly;
+    top: 0px;
+  }
+  nav ul {
+    position: relative;
+    background: white;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    left: -2vw;
+    align-items: flex-start;
+  }
+
+  nav ul li {
+    font-size: 0.75rem;
+    margin-left: 20px;
+    border-bottom: 1px solid black;
+    box-sizing: border-box;
+    width: 100%;
+  }
+
+  .submenucontainer {
+    right: 45vw;
+    left: 35vw;
+    width: 0px;
+    top: 0px;
+    position: absolute;
+  }
+
+  nav ul li:hover .submenucontainer {
+    display: block;
+  }
+
+   .navbar{
+    display: none;
+  }
 }
